feat: 修改文件操作逻辑
