# server/model/request/file.go
@@ -3,7 +3,7 @@ package request
 type FileInfo struct {
 	Token   string `json:"token"`
 	Login   string `json:"login"`
-	Path    string `json:"path"`
+	Uid     string `json:"uid"`
 	Content string `json:"content"`
 	Sha     string `json:"sha"`
 }
